@@ -1,12 +1,7 @@
 {
-  "count": 37,
+  "count": 36,
   "uniques": 12,
   "clones": [
-    {
-      "timestamp": "2022-05-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-10T00:00:00Z",
       "count": 1,
